Crate: simple network partitions work too