@@ -4,6 +4,15 @@
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
   :repositories [["bintray" "http://dl.bintray.com/crate/crate"]]
+  :jvm-opts ["-Xmx32g"
+             "-XX:+UseConcMarkSweepGC"
+             "-XX:+UseParNewGC"
+             "-XX:+CMSParallelRemarkEnabled"
+             "-XX:+AggressiveOpts"
+             "-XX:+UseFastAccessorMethods"
+             "-XX:MaxInlineLevel=32"
+             "-XX:MaxRecursiveInlineLevel=2"
+             "-server"]
   :dependencies [[org.clojure/clojure "1.8.0"]
                  [jepsen "0.1.2-SNAPSHOT"]
                  [cheshire "5.6.2"]
